[gd_scene load_steps=12 format=3 uid="uid://cqhy85gaigive"]

[ext_resource type="Script" path="res://Scenes/MainScenes/GameScene.gd" id="1_wp1c4"]
[ext_resource type="Script" path="res://Scenes/UI.gd" id="3_u034m"]
[ext_resource type="Script" path="res://Scenes/Maps/PathSpawner.gd" id="4_w7qqu"]
[ext_resource type="PackedScene" uid="uid://dgjwo6vb6gp7x" path="res://Scenes/Turrets/Panels/GunT1Panel.tscn" id="4_xvahp"]
[ext_resource type="Texture2D" uid="uid://bhqbi7esoiin8" path="res://Assets/Icons/right.png" id="5_178wv"]
[ext_resource type="PackedScene" uid="uid://dhlqh1eu4mp3f" path="res://Scenes/Turrets/Panels/MissilePanel.tscn" id="5_txnp2"]
[ext_resource type="Texture2D" uid="uid://i7iugggxr1lv" path="res://Assets/Icons/pause.png" id="6_e7qyw"]
[ext_resource type="Script" path="res://Scenes/Turrets/Panels/GunT2Panel.gd" id="6_q6a3h"]
[ext_resource type="Script" path="res://Scenes/Health.gd" id="7_00j71"]
[ext_resource type="Texture2D" uid="uid://dmyo8sjx58mjo" path="res://Assets/Icons/rewind.png" id="7_cdd58"]
[ext_resource type="Script" path="res://Scenes/Gold.gd" id="8_r0hbg"]

[node name="GameScene" type="Node2D"]
script = ExtResource("1_wp1c4")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("3_u034m")

[node name="HUD" type="Panel" parent="UI"]
offset_left = 1172.0
offset_top = 512.0
offset_right = 1272.0
offset_bottom = 712.0

[node name="Buildbar" type="FlowContainer" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -85.0
offset_right = 40.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10

[node name="Gun" parent="UI/HUD/Buildbar" groups=["build_button"] instance=ExtResource("4_xvahp")]
layout_mode = 2

[node name="Missile" parent="UI/HUD/Buildbar" groups=["build_button"] instance=ExtResource("5_txnp2")]
layout_mode = 2
script = ExtResource("6_q6a3h")

[node name="Health" type="Label" parent="UI"]
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 50
text = "Health:"
script = ExtResource("7_00j71")

[node name="Gold" type="Label" parent="UI"]
offset_left = 277.0
offset_right = 439.0
offset_bottom = 72.0
theme_override_font_sizes/font_size = 50
text = "Gold:"
script = ExtResource("8_r0hbg")

[node name="GameControls" type="HBoxContainer" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -70.0
offset_right = 144.0
grow_vertical = 0

[node name="pausePlay" type="TextureButton" parent="UI/GameControls"]
process_mode = 3
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource("5_178wv")
texture_pressed = ExtResource("6_e7qyw")
ignore_texture_size = true
stretch_mode = 0

[node name="speedUp" type="TextureButton" parent="UI/GameControls"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("7_cdd58")
ignore_texture_size = true
stretch_mode = 0

[node name="wavetimer" type="Timer" parent="."]

[node name="spwantimer" type="Timer" parent="."]

[node name="PathSpawner" type="Node2D" parent="."]
script = ExtResource("4_w7qqu")

[node name="Timer" type="Timer" parent="PathSpawner"]
autostart = true

[connection signal="pressed" from="UI/GameControls/pausePlay" to="UI" method="_on_pause_play_pressed"]
[connection signal="pressed" from="UI/GameControls/speedUp" to="UI" method="_on_speed_up_pressed"]
[connection signal="timeout" from="wavetimer" to="." method="_on_wavetimer_timeout"]
[connection signal="timeout" from="spwantimer" to="." method="_on_spwantimer_timeout"]
[connection signal="timeout" from="PathSpawner/Timer" to="PathSpawner" method="_on_timer_timeout"]
